--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.127.207.174:9000/</sonar.host.url>
-                <sonar.login>e67c7a2cf3a140dccd89217c7473d25826ae541c</sonar.login>
+                <sonar.login>e67c7a2cf3a140dccd89217c7473d25826ae541c/</sonar.login>
 		<!--<sonar.password>admin</sonar.password>  -->
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
